--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,11 @@ plugins {
     id 'io.spring.dependency-management' version '1.0.8.RELEASE'
 }
 
+ext {
+    lombok = '1.18.12'
+    junit = '5.3.1'
+}
+
 subprojects {
     apply plugin: 'java'
     apply plugin: 'io.spring.dependency-management'
@@ -17,12 +22,22 @@ subprojects {
     }
 
     dependencies {
+        implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+        runtimeOnly 'com.h2database:h2'
+
+        compileOnly group: 'org.projectlombok', name: 'lombok', version: rootProject.ext.lombok
+        annotationProcessor group: 'org.projectlombok', name: 'lombok', version: rootProject.ext.lombok
+        testCompileOnly group: 'org.projectlombok', name: 'lombok', version: rootProject.ext.lombok
+        testAnnotationProcessor group: 'org.projectlombok', name: 'lombok', version: rootProject.ext.lombok
+
         testImplementation('org.springframework.boot:spring-boot-starter-test') {
             exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
         }
     }
 
     test {
-        useJUnitPlatform()
+        useJUnitPlatform {
+            includeEngines 'junit-jupiter'
+        }
     }
 }
