Code improvements and setup of MSSQL datasource

--- a/gs-securing-web/src/main/resources/application.properties
+++ b/gs-securing-web/src/main/resources/application.properties
@@ -1,9 +1,27 @@
-logging.level.com.spring.example=DEBUG
+## i18 configuration
 spring.messages.basename=i18n/messages
+
+## Thymeleaf configurations
 spring.thymeleaf.cache=false
 spring.thymeleaf.enabled=true 
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
-logging.level.org.hibernate.SQL=DEBUG
-spring.jpa.properties.hibernate.format_sql=true
+
+## Logging definitions
+logging.level.com.spring.example=DEBUG
+#logging.level.org.hibernate=DEBUG
+
+## initData() definitions
 spring.load.sample.data=true
+
+## MS SQL Server configuration
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=springbootdb
+spring.datasource.username=sa
+spring.datasource.password=Passw0rd
+spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.jpa.show-sql=true
+spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
+spring.jpa.hibernate.ddl-auto=update
+
+## Hibernate configurations
+#spring.jpa.properties.hibernate.format_sql=true
