--- a/build.gradle
+++ b/build.gradle
@@ -19,17 +19,19 @@ subprojects {
 
     repositories {
         mavenCentral()
+        jcenter()
     }
 
     dependencies {
         implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-        runtimeOnly 'com.h2database:h2'
+        implementation group: 'com.microsoft.sqlserver', name: 'mssql-jdbc', version: '8.2.0.jre8'
 
         compileOnly group: 'org.projectlombok', name: 'lombok', version: rootProject.ext.lombok
         annotationProcessor group: 'org.projectlombok', name: 'lombok', version: rootProject.ext.lombok
         testCompileOnly group: 'org.projectlombok', name: 'lombok', version: rootProject.ext.lombok
         testAnnotationProcessor group: 'org.projectlombok', name: 'lombok', version: rootProject.ext.lombok
 
+        testImplementation 'com.h2database:h2'
         testImplementation('org.springframework.boot:spring-boot-starter-test') {
             exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
         }
