Added support for spring actuator endpoints

--- a/gs-securing-web/src/main/resources/application.properties
+++ b/gs-securing-web/src/main/resources/application.properties
@@ -1,11 +1,13 @@
+#spring.application.name=secure-app
+
 ## i18 configuration
 spring.messages.basename=i18n/messages
 
 ## Thymeleaf configurations
-spring.thymeleaf.cache=false
-spring.thymeleaf.enabled=true 
-spring.thymeleaf.prefix=classpath:/templates/
-spring.thymeleaf.suffix=.html
+#spring.thymeleaf.cache=false
+#spring.thymeleaf.enabled=true
+#spring.thymeleaf.prefix=classpath:/templates/
+#spring.thymeleaf.suffix=.html
 
 ## Logging definitions
 logging.level.com.spring.example=DEBUG
@@ -25,3 +27,7 @@ spring.jpa.hibernate.ddl-auto=update
 
 ## Hibernate configurations
 #spring.jpa.properties.hibernate.format_sql=true
+
+# Enable Actuator Endpoints
+management.endpoints.web.exposure.include=*
+logging.file.name=secure-app.log
