--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ subprojects {
     }
 
     dependencies {
+        implementation "org.springframework.boot:spring-boot-starter-actuator"
         implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
         implementation group: 'com.microsoft.sqlserver', name: 'mssql-jdbc', version: '8.2.0.jre8'
 
