Added components to angular-app and added user controller to be integrated with angular-app

--- a/gs-securing-web/src/main/resources/application.properties
+++ b/gs-securing-web/src/main/resources/application.properties
@@ -12,6 +12,7 @@ spring.messages.basename=i18n/messages
 ## Logging definitions
 logging.level.com.spring.example=DEBUG
 #logging.level.org.hibernate=DEBUG
+#logging.level.org.springframework=DEBUG
 
 ## initData() definitions
 spring.load.sample.data=true
