--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,11 @@ plugins {
     id 'io.spring.dependency-management' version '1.0.8.RELEASE'
 }
 
+def excludedProjects = [
+        "angular-spring-boot",
+        "test-utils"
+]
+
 ext {
     lombok = '1.18.12'
     junit = '5.3.1'
