--- a/angular-spring-boot/tsconfig.json
+++ b/angular-spring-boot/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
+    "baseUrl": "./",
     "downlevelIteration": true,
     "importHelpers": true,
     "outDir": "./dist/out-tsc",
@@ -17,7 +18,11 @@
       "es2017",
       "dom"
     ],
-    "module": "esnext",
-    "baseUrl": "./"
+    "paths": {
+      "@environment/*": ["./src/environments/*"],
+      "@user/*": ["./src/app/module/user/*"],
+      "@shared/*": ["./src/app/shared/*"]
+    },
+    "module": "esnext"
   }
 }
