--- a/angular-spring-boot/tsconfig.json
+++ b/angular-spring-boot/tsconfig.json
@@ -20,6 +20,9 @@
     ],
     "paths": {
       "@environment/*": ["./src/environments/*"],
+      "@app/*": ["./src/app/*"],
+      "@login/*": ["./src/app/module/login/*"],
+      "@home/*": ["./src/app/module/home/*"],
       "@user/*": ["./src/app/module/user/*"],
       "@shared/*": ["./src/app/shared/*"]
     },
